# django-payments-talo

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
payments_talo/: __init__.py  provider.py
tests/: conftest.py  test_provider.py
