[project]
name = "django-payments-talo"
version = "0.1.0"
description = "A django-payments backend for Talo, an Argentine payment platform for bank transfers."
authors = [
    {name = "Teofilo Sibileau", email = "teo.sibileau@gmail.com"}
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
keywords = ["django", "payments", "talo", "argentina", "bank-transfer"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "django-payments>=3.1.0,<4.0.0",
    "requests>=2.28.0,<3.0.0",
    "django<5.3",
]

[project.urls]
Homepage = "https://github.com/teosibileau/django-payments-talo"
Repository = "https://github.com/teosibileau/django-payments-talo"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "payments_talo"}]

[tool.poetry.group.dev.dependencies]
ipython = "^9.11.0"
pytest = "^9.0.2"
